--- a/src/main/resources/static/spa/css/appDark.css
+++ b/src/main/resources/static/spa/css/appDark.css
@@ -13,3 +13,6 @@ dark,
     color: var(--dwc-body-color-dark);
     border-color: var(--dwc-border-color-dark);
 }
+.dark .image-viewer__dialog {
+    background-color: var(--dwc-body-bg-dark)
+}
